feat: implement referenceId and referenceType (#238)
* feat: implement referenceId and referenceType

* chore: remove unused react-moment dependency
