# libs/api/transaction/data-access/src/lib/dto/make-transfer-request.dto.ts
@@ -12,6 +12,10 @@ export class MakeTransferRequest {
   mint: string
   @ApiProperty()
   lastValidBlockHeight: number
+  @ApiProperty({ nullable: true })
+  referenceId?: string
+  @ApiProperty({ nullable: true })
+  referenceType?: string
   @ApiProperty()
   tx: Buffer
 }
